catkin_ws/logs/firefly_control/build.make.028.log.stderr
/home/chris/catkin_ws/src/firefly_control/src/control.cpp: In member function ‘void control_fly::Callback(const ConstPtr&)’:
/home/chris/catkin_ws/src/firefly_control/src/control.cpp:18:3: error: expected ‘;’ before ‘}’ token
   }
   ^
make[2]: *** [CMakeFiles/control.dir/src/control.cpp.o] Error 1
make[1]: *** [CMakeFiles/control.dir/all] Error 2
make[1]: *** 正在等待未完成的任务....
make: *** [all] Error 2
